- Renamed environments to inventories - Added README-files - .gitignore-files

--- a/roles/example-role/tasks/main.yml
+++ b/roles/example-role/tasks/main.yml
@@ -4,4 +4,6 @@
     command: echo ~
     register: REMOTE_USER_HOME
 
-  - debug: var=REMOTE_USER_HOME
+  - name: Print user's home directory
+    debug:
+      var: REMOTE_USER_HOME.stdout
